Poll for username and show errors

--- a/src/app.global.scss
+++ b/src/app.global.scss
@@ -5,6 +5,7 @@ $base-font: 'Noto Sans', sans-serif;
 $dark-grey: #080808;
 $medium-grey: #808080;
 $green: #52C752;
+$red: #E83F3F;
 
 // Mixins
 @mixin box-sizing () {
