--- a/src/app.global.scss
+++ b/src/app.global.scss
@@ -4,6 +4,7 @@ $base-font: 'Noto Sans', sans-serif;
 // Colors
 $dark-grey: #080808;
 $medium-grey: #808080;
+$blue: #20C1E6;
 $green: #52C752;
 $red: #E83F3F;
 
